# yamerl

./: .gitignore  README.md  configure.ac  package.exs
debian/: changelog  control  copyright
doc/: README.md  alternatives.md  features.md  installation.md
doc/reference-manual/: README.md  module-yamerl_the_fork_constr.md
doc/user-guide/: README.md  recipe-basic-parsing.md  recipe-error-handling.md
ebin/: Makefile.am  yamerl_the_fork.app.in.in
include/: Makefile.am  yamerl_the_fork_errors.hrl  yamerl_the_fork_nodes.hrl  yamerl_the_fork_nodes_yamerl_the_fork_extensions.hrl  yamerl_the_fork_tokens.hrl  yamerl_the_fork_types.hrl
include/internal/: yamerl_the_fork_constr.hrl  yamerl_the_fork_parser.hrl
src/: Makefile.am  yamerl_the_fork.app.src  yamerl_the_fork.erl  yamerl_the_fork_app.erl  yamerl_the_fork_constr.erl  yamerl_the_fork_errors.erl  yamerl_the_fork_node_bool.erl  yamerl_the_fork_node_bool_ext.erl  yamerl_the_fork_node_bool_json.erl  yamerl_the_fork_node_erlang_atom.erl  yamerl_the_fork_node_erlang_fun.erl  yamerl_the_fork_node_float.erl  yamerl_the_fork_node_float_ext.erl  yamerl_the_fork_node_float_json.erl  yamerl_the_fork_node_int.erl  yamerl_the_fork_node_int_ext.erl  yamerl_the_fork_node_int_json.erl  yamerl_the_fork_node_ipaddr.erl  yamerl_the_fork_node_map.erl  yamerl_the_fork_node_null.erl  yamerl_the_fork_node_null_json.erl  yamerl_the_fork_node_seq.erl  yamerl_the_fork_node_size.erl  yamerl_the_fork_node_str.erl  yamerl_the_fork_node_str_json.erl  yamerl_the_fork_node_timestamp.erl  yamerl_the_fork_parser.erl  yamerl_the_fork_sup.erl  yamerl_the_fork_yamler_compat.erl
testsuite/: benchmark.in  prepare-testsuite-for-rebar
testsuite/data/benchmark/: bench-yamerl_the_fork_parser
testsuite/data/construction/: alias.pattern  bool.pattern  bool_json.pattern  empty.pattern  erlang_atom.data  erlang_atom.pattern  erlang_atom_if_exist.data  erlang_atom_if_exist.pattern  erlang_atom_if_exist_auto.pattern  erlang_fun.data  erlang_fun.pattern  float.pattern  int.pattern  ipaddr.pattern  map.pattern  null.pattern  null_json.pattern  seq.pattern  size.pattern  str.pattern  stream.pattern  timestamp.pattern  unicode_string.pattern  unknown_alias.pattern
testsuite/data/examples/: invoice.pattern  logfile.pattern
testsuite/data/parsing/: bom_between_docs.pattern  dos_newlines.pattern  empty.pattern  enc_invalid_unicode.pattern  enc_utf16be_bom.pattern  enc_utf16be_char.pattern  enc_utf16le_bom.pattern  enc_utf16le_char.pattern  enc_utf32be_bom.pattern  enc_utf32be_char.pattern  enc_utf32le_bom.pattern  enc_utf32le_char.pattern  enc_utf8_bom.pattern  enc_utf8_char.pattern  ex_5.10_reserved_indicators.pattern  ex_5.12_tabs_and_spaces.pattern  ex_5.13_escaped_characters.pattern  ex_5.14_invalid_escaped_characters.pattern  ex_5.2_invalid_bom.pattern  ex_5.3_block_structure_indicators.pattern  ex_5.6_node_property_indicators.pattern  (+111 more)
(+6 files in other folders)
