headersdir = $(ERLANG_INSTALL_LIB_DIR_yamerl_the_fork)/include

nobase_dist_headers_DATA = yamerl_the_fork_types.hrl				\
			   yamerl_the_fork_errors.hrl				\
			   yamerl_the_fork_tokens.hrl				\
			   yamerl_the_fork_nodes.hrl				\
			   yamerl_the_fork_nodes_yamerl_the_fork_extensions.hrl		\
			   internal/yamerl_the_fork_parser.hrl			\
			   internal/yamerl_the_fork_constr.hrl
